compiler/testData/diagnostics/tests/enum/enumNoComma.kt
<!ENUM_USES_DEPRECATED_DELIMITERS!>enum class MyEnum<!> {
    A
    B
}